# glsl-minifier

./: CMakeLists.txt  README.md
examples/: output.glsl  test.glsl
include/: Application.hpp  ErrorReporter.hpp  MinificationStats.hpp  Minifier.hpp  Scanner.hpp  ShaderVerifier.hpp  SymbolTable.hpp  Token.hpp
src/: Application.cpp  ErrorReporter.cpp  MinificationStats.cpp  Minifier.cpp  Scanner.cpp  ShaderVerifier.cpp  SymbolTable.cpp  Token.cpp  main.cpp
